[gd_scene load_steps=8 format=2]

[ext_resource path="res://aura.gd" type="Script" id=1]
[ext_resource path="res://idle 6 frames.tres" type="Animation" id=2]
[ext_resource path="res://addons/dialogic/Images/Event Icons/Main Icons/question.svg" type="Texture" id=3]
[ext_resource path="res://NPC/mirna.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 3.8, 4.1, 4.2, 4.5, 5.4, 5.5, 5.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle 4 frames"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=3]

[node name="aura" type="StaticBody2D"]
position = Vector2( 608, 70 )
z_index = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
flip_h = true
hframes = 16
frame = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 1 )
"anims/idle 4 frames" = SubResource( 2 )
"anims/idle 6 frames" = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -17, 1 )
scale = Vector2( 3.99617, 1.6 )
shape = SubResource( 3 )

[node name="QuestionMark" type="Sprite" parent="."]
position = Vector2( -3.11816, -32.5178 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
